--- a/ingress/ingress.yml
+++ b/ingress/ingress.yml
@@ -23,7 +23,7 @@ spec:
           service:
             name: api-service
             port:
-              number: 3000
+              number: 3001
       - path: /ws(/|$)(.*)
         pathType: ImplementationSpecific
         backend:
@@ -31,5 +31,12 @@ spec:
             name: ws2-service # Name of the WebSocket service
             port:
               number: 3002        # Port of the WebSocket service
+      - path: /
+        pathType: ImplementationSpecific
+        backend:
+          service:
+            name: frontend-service # Name of the frontend service
+            port:
+              number: 3000        # Port of the frontend service
 
 
